--- a/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-date-of-birth.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-date-of-birth.html
@@ -8,6 +8,7 @@
 {% set formAction = "/questions/" + questionGroup + "/" + currentPage %}
 {% set questionNumber = 4 %}
 {% set totalQuestions = 9 %}
+{% set backLink = '/questions/patient-details/do-you-know-the-patients-hospital-or-clinic-number' %}
 {% set sectionTitle = "Patient's details" %}
 
 {% block form %}
