--- a/DHSC.ANS.Service/app/views/questions/patient-details/does-the-patient-live-in-england-or-wales.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/does-the-patient-live-in-england-or-wales.html
@@ -2,7 +2,7 @@
 
 {% extends "../../layouts/question-page.html" %}
 
-{% set nextPage = "" %}
+{% set nextPage = "do-you-know-the-patients-postcode" %}
 {% set currentPage = "does-the-patient-live-in-england-or-wales" %}
 {% set questionGroup = "patient-details" %}
 {% set formAction = "/questions/" + questionGroup + "/" + currentPage %}
