--- a/DHSC.ANS.Service/app/views/forms.html
+++ b/DHSC.ANS.Service/app/views/forms.html
@@ -17,7 +17,7 @@
 
     {{ govukButton({
         text: "Add a new form",
-        href: "/forms/new",
+        href: "/questions/patient-details/do-you-know-the-patients-nhs-number",
         classes: "govuk-!-margin-bottom-6"
     }) }}
 
