--- a/DHSC.ANS.Service/app/views/layouts/main.html
+++ b/DHSC.ANS.Service/app/views/layouts/main.html
@@ -1,11 +1,14 @@
-{#
-For guidance on how to use layouts see:
-https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
-#}
-
-{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
-
 {% block beforeContent %}
+    {% from "govuk/components/service-navigation/macro.njk" import govukServiceNavigation %}
+
+    {{ govukServiceNavigation({
+    serviceName: "Abortion Notification Service",
+    serviceUrl:  "#",
+    navigation:  navigation  
+    }) }}
+
+    {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+
     {{ govukPhaseBanner({
         tag: {
         text: "Alpha"
