--- a/DHSC.ANS.Service/app/views/questions/patient-details/do-you-know-the-patients-postcode.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/do-you-know-the-patients-postcode.html
@@ -6,7 +6,7 @@
 {% set currentPage = "do-you-know-the-patients-postcode" %}
 {% set questionGroup = "patient-details" %}
 {% set formAction = "/questions/" + questionGroup + "/" + currentPage %}
-{% set nextPage = "what-is-the-patients-ethnic-group" %}
+{% set nextPage = "" %}
 {% set questionNumber = 1 %}
 {% set totalQuestions = 9 %}
 {% set sectionTitle = "Patient's details" %}
