--- a/DHSC.ANS.Service/app/views/questions/patient-details/do-you-know-the-patients-nhs-number.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/do-you-know-the-patients-nhs-number.html
@@ -1,48 +1,80 @@
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
+{% from "govuk/components/input/macro.njk" import govukInput %}
+{% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% extends "../../layouts/question-page.html" %}
 
-{% set nextPage = "" %}
 {% set currentPage = "do-you-know-the-patients-nhs-number" %}
+{% set backLink = "do-you-know-the-patients-hospital-or-clinic-number" %}
 {% set questionGroup = "patient-details" %}
 {% set formAction = "/questions/" + questionGroup + "/" + currentPage %}
+{% set nextPage = "REPLACE_WITH_NEXT_PAGE_SLUG" %}
+{% set sectionTitle = "Patient's details" %}
 {% set questionNumber = 1 %}
 {% set totalQuestions = 9 %}
-{% set sectionTitle = "Patient's details" %}
 
 {% block form %}
 
-  {% set error = null %}
-  {% for e in errors %}
-    {% if e.field == "patientInformation.nhsNumber.nhsNumberKnown" %}
-      {% set error = e %}
-    {% endif %}
-  {% endfor %}
+    {% set nhsNumberKnownError = null %}
+    {% set nhsNumberValueError = null %}
 
-  {{ govukRadios({
-    name: "patientInformation.nhsNumber.nhsNumberKnown",
-    fieldset: {
-      legend: {
-        text: "Do you know the patient's NHS number?",
-        isPageHeading: true,
-        classes: "govuk-fieldset__legend--l"
-      }
-    },
-    errorMessage: error and {
-      text: error.message
-    },
-    items: [
-      {
-        value: "yes",
-        text: "Yes",
-        checked: checked("patientInformation.nhsNumber.nhsNumberKnown", "yes")
-      },
-      {
-        value: "no",
-        text: "No",
-        checked: checked("patientInformation.nhsNumber.nhsNumberKnown", "no")
-      }
-    ]
-  }) }}
+    {% for e in errors %}
+        {% if e.field == "patientDemographics.nhsNumberKnown" %}
+            {% set nhsNumberKnownError = e %}
+        {% elseif e.field == "patientDemographics.nhsNumberValue" %}
+            {% set nhsNumberValueError = e %}
+        {% endif %}
+    {% endfor %}
+
+    {% set nhsNumberHtml %}
+        {{ govukInput({
+            id: "nhs-number-value",
+            name: "patientDemographics.nhsNumberValue",
+            label: {
+                text: "Enter the NHS number",
+                classes: "govuk-label--s"
+            },
+            hint: {
+                text: "NHS number must be 10 digits long"
+            },
+            classes: "govuk-input--width-20",
+            type: "text",
+            spellcheck: false,
+            errorMessage: nhsNumberValueError and {
+                text: nhsNumberValueError.message
+            },
+            value: data['patientDemographics.nhsNumberValue']
+        }) }}
+    {% endset %}
+
+    {{ govukRadios({
+        name: "patientDemographics.nhsNumberKnown",
+        fieldset: {
+            legend: {
+                text: "Do you know the patient’s NHS number?",
+                isPageHeading: true,
+                classes: "govuk-fieldset__legend--l"
+            }
+        },
+        errorMessage: nhsNumberKnownError and {
+            text: nhsNumberKnownError.message
+        },
+        items: [
+            {
+                value: "yes",
+                text: "Yes",
+                checked: checked("patientDemographics.nhsNumberKnown", "yes"),
+                conditional: {
+                html: nhsNumberHtml
+            }
+            },
+            {
+                value: "no",
+                text: "No",
+                checked: checked("patientDemographics.nhsNumberKnown", "no")
+            }
+        ]
+    }) }}
+
 
 {% endblock %}
