--- a/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-martial-status.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-martial-status.html
@@ -6,7 +6,7 @@
 {% set currentPage = "what-is-the-patients-martial-status" %}
 {% set questionGroup = "patient-details" %}
 {% set formAction = "/questions/" + questionGroup + "/" + currentPage %}
-{% set nextPage = "" %}
+{% set nextPage = "has-the-patient-had-any-stillbirths-or-livebirths" %}
 {% set sectionTitle = "Patient's details" %}
 {% set questionNumber = 4 %}
 {% set totalQuestions = 9 %}
