--- a/DHSC.ANS.Service/app/views/questions/patient-details/do-you-know-the-patients-hospital-or-clinic-number.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/do-you-know-the-patients-hospital-or-clinic-number.html
@@ -4,6 +4,7 @@
 {% extends "../../layouts/question-page.html" %}
 
 {% set nextPage = "" %}
+{% set backLink = "/forms" %}
 {% set currentPage = "do-you-know-the-patients-hospital-or-clinic-number" %}
 {% set questionGroup = "patient-details" %}
 {% set formAction = "/questions/" + questionGroup + "/" + currentPage %}
