--- a/DHSC.ANS.Service/app/views/questions/patient-details/has-the-patient-had-any-stillbirths-or-livebirths.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/has-the-patient-had-any-stillbirths-or-livebirths.html
@@ -5,9 +5,10 @@
 {% extends "../../layouts/question-page.html" %}
 
 {% set currentPage = "has-the-patient-had-any-stillbirths-or-livebirths" %}
+{% set backLink = "what-is-the-patients-martial-status" %}
 {% set questionGroup = "patient-details" %}
 {% set formAction = "/questions/" + questionGroup + "/" + currentPage %}
-{% set nextPage = "REPLACE_WITH_NEXT_PAGE_SLUG" %}
+
 {% set sectionTitle = "Patient's details" %}
 {% set questionNumber = 5 %}
 {% set totalQuestions = 9 %}
