--- a/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-white-background.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-white-background.html
@@ -10,6 +10,7 @@
 {% set questionNumber = 3 %}
 {% set totalQuestions = 9 %}
 {% set sectionTitle = "Patient’s details" %}
+ {% set backLink = "what-is-the-patients-ethnic-group" %}
 
 {% block form %}
 
