Code for confirm patient age interruption screen - saves on server

--- a/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-date-of-birth.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-date-of-birth.html
@@ -2,7 +2,7 @@
 
 {% extends "../../layouts/question-page.html" %}
 
-{% set nextPage = "does-the-patient-live-in-england-or-wales" %}
+{% set nextPage = "" %}
 {% set currentPage = "what-is-the-patients-date-of-birth" %}
 {% set questionGroup = "patient-details" %}
 {% set formAction = "/questions/" + questionGroup + "/" + currentPage %}
