changed error message

--- a/DHSC.ANS.Service/app/views/questions/patient-details/do-you-know-the-patients-hospital-or-clinic-number.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/do-you-know-the-patients-hospital-or-clinic-number.html
@@ -35,7 +35,7 @@
                 classes: "govuk-label--m"
             },
             hint: {
-                text: "The patient’s hospital or clinic number must be X digits long"
+                text: "The patient’s hospital or clinic number must be 10 digits long"
             },
             errorMessage: numberError and {
                 text: numberError.message
