--- a/DHSC.ANS.Service/app/assets/sass/application.scss
+++ b/DHSC.ANS.Service/app/assets/sass/application.scss
@@ -1,5 +1,6 @@
 @import "no-wrap";
 @import "sortable";
 @import "custom-filters";
+@import "contrast_fixes";
 
 @import "node_modules/@ministryofjustice/frontend/moj/all";
