--- a/DHSC.ANS.Service/app/views/questions/patient-details/do-you-know-the-patients-nhs-number.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/do-you-know-the-patients-nhs-number.html
@@ -12,6 +12,7 @@
 {% set sectionTitle = "Patient's details" %}
 {% set questionNumber = 1 %}
 {% set totalQuestions = 9 %}
+{% set pageName = "Enter the NHS number" %}
 
 {% block form %}
 
