--- a/DHSC.ANS.Service/app/views/questions/patient-details/do-you-know-the-patients-postcode.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/do-you-know-the-patients-postcode.html
@@ -10,6 +10,7 @@
 {% set questionNumber = 1 %}
 {% set totalQuestions = 9 %}
 {% set sectionTitle = "Patient's details" %}
+{% set pageName = "Enter the patient’s postcode" %}
 
 {% block form %}
 
