--- a/DHSC.ANS.Service/app/views/questions/patient-details/do-you-know-the-place-number.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/do-you-know-the-place-number.html
@@ -9,6 +9,7 @@
 {% set questionNumber = 3 %}
 {% set totalQuestions = 9 %}
 {% set sectionTitle = "Patient's details" %}
+{% set pageName = "Do you know the hospital or clinic number of the place the pregnancy was terminated?" %}
 
 {% block form %}
 
