--- a/DHSC.ANS.Service/app/views/questions/patient-details/enter-patient-address.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/enter-patient-address.html
@@ -9,7 +9,7 @@
 {% set formAction = "/questions/" + questionGroup + "/" + currentPage %}
 {% set questionNumber = 2 %}
 {% set totalQuestions = 9 %}
-{% set sectionTitle = "Patient’s details" %}
+{% set pageName = "Enter the patients address" %}
 
 {% block form %}
 
