--- a/DHSC.ANS.Service/app/views/questions/patient-details/patient-postcode-search-results.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/patient-postcode-search-results.html
@@ -10,6 +10,7 @@
 {% set questionNumber = 2 %}
 {% set totalQuestions = 9 %}
 {% set sectionTitle = "Patient’s details" %}
+{% set pageName = "Search for the patients postcode" %}
 
 {% block form %}
 
