--- a/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-address.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-address.html
@@ -10,6 +10,7 @@
 {% set sectionTitle = "Patient's details" %}
 {% set questionNumber = 6 %} {# Example question number #}
 {% set totalQuestions = 9 %} {# Example total questions #}
+{% set pageName = "What is the patient’s address?" %}
 
 {% block form %}
 
