--- a/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-date-of-birth.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-date-of-birth.html
@@ -10,6 +10,7 @@
 {% set totalQuestions = 9 %}
 {% set backLink = '/questions/patient-details/do-you-know-the-patients-hospital-or-clinic-number' %}
 {% set sectionTitle = "Patient's details" %}
+{% set pageName = "What is the patient's date of birth?" %}
 
 {% block form %}
 
