--- a/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-marital-status.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-marital-status.html
@@ -10,6 +10,7 @@
 {% set sectionTitle = "Patient's details" %}
 {% set questionNumber = 4 %}
 {% set totalQuestions = 9 %}
+{% set pageName = "What is the patient’s legal marital or registered civil partnership status?" %}
 
 {% block form %}
 
