--- a/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-mixed-background.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-mixed-background.html
@@ -10,6 +10,7 @@
 {% set questionNumber = 3 %}
 {% set totalQuestions = 9 %}
 {% set sectionTitle = "Patient’s details" %}
+{% set pageName = "Which of the following best describes the patient’s mixed or multiple ethnic groups background?" %}
 
 {% block form %}
 
