--- a/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-name.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-name.html
@@ -9,6 +9,7 @@
 {% set questionNumber = 1 %}
 {% set totalQuestions = 9 %}
 {% set sectionTitle = "Patient's details" %}
+{% set pageName = "What is the patient's name?" %}
 
 {% block form %}
 
