--- a/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-white-background.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-white-background.html
@@ -10,7 +10,8 @@
 {% set questionNumber = 3 %}
 {% set totalQuestions = 9 %}
 {% set sectionTitle = "Patient’s details" %}
- {% set backLink = "what-is-the-patients-ethnic-group" %}
+{% set backLink = "what-is-the-patients-ethnic-group" %}
+{% set pageName = "Which of the following best describes the patient’s White background?" %}
 
 {% block form %}
 
