--- a/DHSC.ANS.Service/app/views/questions/patient-details/do-you-know-the-patients-hospital-or-clinic-number.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/do-you-know-the-patients-hospital-or-clinic-number.html
@@ -11,6 +11,7 @@
 {% set questionNumber = 1 %}
 {% set totalQuestions = 9 %}
 {% set sectionTitle = "Patient's details" %}
+{% set pageName = "Enter the patient’s hospital or clinic number" %}
 
 {% block form %}
 
