--- a/DHSC.ANS.Service/app/views/questions/patient-details/has-the-patient-had-any-stillbirths-or-livebirths.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/has-the-patient-had-any-stillbirths-or-livebirths.html
@@ -8,6 +8,7 @@
 {% set backLink = "what-is-the-patients-marital-status" %}
 {% set questionGroup = "patient-details" %}
 {% set formAction = "/questions/" + questionGroup + "/" + currentPage %}
+{% set pageName = "Has the patient had any stillbirths or livebirths over 24 weeks?" %}
 
 {% set sectionTitle = "Patient's details" %}
 {% set questionNumber = 5 %}
