--- a/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-hospital-or-clinic-number.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-hospital-or-clinic-number.html
@@ -9,6 +9,7 @@
 {% set questionNumber = 3 %}
 {% set totalQuestions = 9 %}
 {% set sectionTitle = "Patient's details" %}
+{% set pageName = "What is the hospital or clinic number?" %}
 
 {% block form %}
 
