--- a/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-ethnic-group.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-ethnic-group.html
@@ -10,6 +10,7 @@
 {% set questionNumber = 3 %}
 {% set totalQuestions = 9 %}
 {% set sectionTitle = "Patient’s details" %}
+{% set pageName = "What is the patient’s ethnic group?" %}
 
 {% block form %}
 
